change font sizes to rem on degree page and correct landscape layout

--- a/css/header-footer-nav.css
+++ b/css/header-footer-nav.css
@@ -53,7 +53,7 @@ header {
 #menu-desktop-inner{
   top: 50%;
   left: 50%;
-  padding-right: 1vw;
+  padding-right: 0.5vw;
   transform: translate(-50%, -50%);
   position: absolute;
   display: flex;
@@ -268,7 +268,7 @@ This is to allow seperate animation of each individual link */
   transition: 0.4s;
   transition-timing-function: ease-in-out;
   text-align: center;
-  font-size: calc(min(4vw, 6vh) * 0.6);
+  font-size: calc(min(3rem, min(8vw, 6vh)) * 0.6);
   font-weight: 300;
 }
 
@@ -357,7 +357,7 @@ footer {
   }
 
   main{
-    padding: 12.5vh 16vw 0;
+    padding: 12.5vh 12vw 0;
   }
 
   .push-menu-button-top#menu-icon{
