--- a/css/degree-programme.css
+++ b/css/degree-programme.css
@@ -1,5 +1,5 @@
 #course{
-  font-size: calc(min(3rem, min(8vw, 6vh)) * 0.8);
+  font-size: 1.8rem;
   margin: 0 0 3vh;
   font-weight: 500;
 }
@@ -7,11 +7,11 @@
 #overview{
   text-align: left;
   margin: 0 0 3vh;
-  font-size: calc(min(3rem, min(8vw, 6vh)) * 0.5);
+  font-size: 1.2rem;
 }
 
 #prefix{
-  font-size: calc(min(3rem, min(8vw, 6vh)) * 0.8);
+  font-size: 1.8rem;
   margin: 0 0 3vh;
   font-weight: 300;
 }
@@ -83,26 +83,29 @@
   height: 0;
 }
 
-.mobile-desciption-inner h1{
-  margin: 2vh 8vw;
-  font-size: calc(min(3rem, min(8vw, 6vh)) * 0.8);
+.mobile-description-inner{
+  margin: 0 8vw;
 }
 
-.mobile-desciption-inner h2{
-  font-size: calc(min(3rem, min(8vw, 6vh)) * 0.5);
-  margin: 0 8vw 2vh;
+.mobile-description-inner h1{
+  margin: 2vh 0;
+  font-size: 1.4rem;
 }
 
-.mobile-desciption-inner img{
+.mobile-description-inner h2{
+  font-size: 0.9rem;
+  margin: 0 0 2vh;
+}
+
+.mobile-description-inner img{
   margin-bottom: 8vh;
-  width: 50%;
+  width: 8rem;
   border-radius: 20px;
 }
 
-.mobile-desciption-inner p{
-  margin: 0 8vw 1vh;
+.mobile-description-inner p{
+  margin: 0 0 1vh;
   text-align: left;
-  font-size: calc(min(3rem, min(8vw, 6vh)) * 0.5);
 }
 
 .bar-to-close{
@@ -112,7 +115,7 @@
   cursor: pointer;
   height: 2vh;
   width: 5vh;
-  margin: 0 0.75vh 1.2vh auto;
+  margin: 0 calc(0.75vh - 8vw) 1.2vh auto;
 }
 
 .bar-to-close-inner{
@@ -141,6 +144,11 @@
   border-bottom: 1px solid #ccc5b9;
 }
 
+#desktop-module-1-title{
+  background-color: #eb5e28;
+  color: #252422;
+}
+
 .desktop-title-inner{
   display: flex;
   align-items: center;
@@ -162,6 +170,10 @@
     border-radius: 2px;
     transition: all 0.15s ease-in-out, background-color 0.4s ease-in-out;
     background-color: #ccc5b9;
+}
+
+#desktop-module-1-title .desktop-title-inner-arrow *{
+  background-color: #252422;
 }
   
 .desktop-title-inner-line-1{
@@ -228,26 +240,35 @@
   top: calc(7 * (100% - 7px) / 8 + 7 * 1px);
 }
 
-.desktop-desciption-inner h1{
-  margin: 2vh 8vw;
-  font-size: calc(min(3rem, min(8vw, 6vh)) * 0.8);
+.desktop-description-inner{
+  opacity: 0;
+  transition: all 0.4s ease-in-out;
+  margin: 0 4vw;
 }
 
-.desktop-desciption-inner h2{
-  font-size: calc(min(3rem, min(8vw, 6vh)) * 0.5);
-  margin: 0 8vw 2vh;
+#desktop-module-1-description .desktop-description-inner{
+  opacity: 100%;
 }
 
-.desktop-desciption-inner img{
+.desktop-description-inner h1{
+  margin: 2vh 0;
+  font-size: 1.4rem;
+}
+
+.desktop-description-inner h2{
+  font-size: 0.9rem;
+  margin: 0 0 2vh;
+}
+
+.desktop-description-inner img{
   margin-bottom: 8vh;
-  width: 50%;
+  width: 8rem;
   border-radius: 20px;
 }
 
-.desktop-desciption-inner p{
-  margin: 0 8vw 1vh;
+.desktop-description-inner p{
+  margin: 0 0 2vh;
   text-align: left;
-  font-size: calc(min(3rem, min(8vw, 6vh)) * 0.5);
 }
 
 .first{
@@ -264,7 +285,7 @@
 }
 
 #more-info{
-  font-size: calc(min(3rem, min(8vw, 6vh)) * 0.5);
+  font-size: 1.2rem;
   margin-bottom: 3vh;
 }
 
