--- a/css/quiz.css
+++ b/css/quiz.css
@@ -9,7 +9,7 @@ main h1{
 }
 
 main img{
-    width: min(50vw, 30vh);
+    width: 12rem;
     box-shadow: 0 0 1px 2px #403D39;
     border-radius: 20px;
 }
