--- a/css/header-footer-nav.css
+++ b/css/header-footer-nav.css
@@ -7,6 +7,7 @@
 
 /* Force body to take up whole screen and attach main & footer to top & bottom of screen respectively */
 body {
+  min-width: 320px;
   height: 100vh;
   display: flex;
   flex-direction: column;
