--- a/css/data.css
+++ b/css/data.css
@@ -20,7 +20,7 @@ th {
     font-weight: 500;
 }
 
-p{
+#disclaimer{
     font-size: 0.7rem;
     margin: 1vh 0 3vh;
 }
@@ -32,4 +32,107 @@ h2{
 
 #canvas-container{
     width: 100%;
+}
+
+#options{
+    text-align: left;
+    margin: 2vh 0 4vh;
+}
+
+#options p{
+    font-size: 4vw;
+    margin: 0;
+}
+
+#chart-type{
+    margin: 0 0 1vh;
+    width: 60%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+svg{
+    width: 6vw;
+    height: 6vw;
+    cursor: pointer;
+}
+
+#color-scheme{
+    width: 95%;
+    margin: 0;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+#scheme-1, #scheme-2, #scheme-3{
+    border: 4px solid #403D39;
+    border-radius: 8px;
+    display: inline-flex;
+    height: 4vw;
+    width: 12vw;
+    align-items: stretch;
+    overflow: hidden;
+    cursor: pointer;
+}
+
+#scheme-1 div{
+    flex-grow: 1;
+}
+
+#scheme-1 div:first-child{
+    background-color: rgb(0, 255, 0);
+    border-right: 1px solid #403D39;
+}
+
+#scheme-1 div:nth-child(2){
+    background-color: rgb(0, 0, 255);
+    border-left: 1px solid #403D39;
+    border-right: 1px solid #403D39;
+}
+
+#scheme-1 div:last-child{
+    background-color: rgb(255, 0, 0);
+    border-left: 1px solid #403D39;
+}
+
+#scheme-2 div{
+    flex-grow: 1;
+}
+
+#scheme-2 div:first-child{
+    background-color: rgb(0, 0, 255);
+    border-right: 1px solid #403D39;
+}
+
+#scheme-2 div:nth-child(2){
+    background-color: rgb(0, 255, 0);
+    border-left: 1px solid #403D39;
+    border-right: 1px solid #403D39;
+}
+
+#scheme-2 div:last-child{
+    background-color: rgb(255, 0, 0);
+    border-left: 1px solid #403D39;
+}
+
+#scheme-3 div{
+    flex-grow: 1;
+}
+
+#scheme-3 div:first-child{
+    background-color: rgb(255, 0, 0);
+    border-right: 1px solid #403D39;
+}
+
+#scheme-3 div:nth-child(2){
+    background-color: rgb(0, 255, 0);
+    border-left: 1px solid #403D39;
+    border-right: 1px solid #403D39;
+}
+
+#scheme-3 div:last-child{
+    background-color: rgb(0, 0, 255);
+    border-left: 1px solid #403D39;
 }
