--- a/css/data.css
+++ b/css/data.css
@@ -30,22 +30,18 @@ h2{
     margin: 0 0 3vh;
 }
 
-#canvas-container{
-    width: 100%;
-}
-
 #options{
     text-align: left;
     margin: 2vh 0 4vh;
 }
 
 #options p{
-    font-size: 4vw;
+    font-size: min(3.8vw, 2.8vh);
     margin: 0;
 }
 
 #chart-type{
-    margin: 0 0 1vh;
+    margin: 0 0 2vh;
     width: 60%;
     display: flex;
     justify-content: space-between;
@@ -54,8 +50,8 @@ h2{
 
 svg{
     border-radius: 5px;
-    width: 6vw;
-    height: 6vw;
+    width: min(5.8vw, 5vh);
+    height: min(5.8vw, 5vh);
     cursor: pointer;
 }
 
@@ -71,8 +67,8 @@ svg{
     border: 4px solid #403D39;
     border-radius: 8px;
     display: inline-flex;
-    height: 4vw;
-    width: 12vw;
+    height: min(4.2vw, 3.4vh);
+    width: calc(min(4.2vw, 3.4vh) * 3);
     align-items: stretch;
     overflow: hidden;
     cursor: pointer;
@@ -80,6 +76,7 @@ svg{
 
 #scheme-1 div{
     flex-grow: 1;
+    flex-shrink: 1;
 }
 
 #scheme-1 div:first-child{
@@ -100,6 +97,7 @@ svg{
 
 #scheme-2 div{
     flex-grow: 1;
+    flex-shrink: 1;
 }
 
 #scheme-2 div:first-child{
@@ -120,6 +118,7 @@ svg{
 
 #scheme-3 div{
     flex-grow: 1;
+    flex-shrink: 1;
 }
 
 #scheme-3 div:first-child{
@@ -136,4 +135,32 @@ svg{
 #scheme-3 div:last-child{
     background-color: rgb(0, 0, 255);
     border-left: 1px solid #403D39;
+}
+
+@media screen and (min-width: 1024px){  
+    main{
+        padding: 15vh 20vw 0;
+    }
+}
+
+@media screen and (min-aspect-ratio: 16/10){
+    main{
+        display: flex;
+        align-items: center;
+        padding: 13vh 8vw 0;
+    }
+
+    #section-1, #section-2{
+        width: 50%;
+        flex-grow: 1;
+        flex-shrink: 1;
+    }
+
+    #section-1{
+        margin-right: 4vw;
+    }
+
+    #section-2{
+        margin-left: 4vw;
+    }
 }
