--- a/css/header-footer-nav.css
+++ b/css/header-footer-nav.css
@@ -332,6 +332,10 @@ footer {
   font-weight: 200;
 }
 
+#accessibility{
+  margin: 10px 20px 10px 0;
+}
+
 /* Noscript styling */
 #page-hide{
   height: 100vh;
