Add author to all files

--- a/css/header-footer-nav.css
+++ b/css/header-footer-nav.css
@@ -1,3 +1,5 @@
+/* author: Jedrzej Golebiewski */
+
 /* To set font weight & style and stop user agent stylesheet from overriding */
 * {
   font-weight: 400;
