--- a/css/degree-programme.css
+++ b/css/degree-programme.css
@@ -2,20 +2,20 @@
 
 #course{
   font-size: 1.8rem;
-  margin: 0 0 3vh;
   font-weight: 500;
+  margin: 0 0 3vh;
 }
 
 #overview{
-  text-align: left;
-  margin: 0 0 3vh;
   font-size: 1.2rem;
+  margin: 0 0 3vh;
+  text-align: left;
 }
 
 #prefix{
   font-size: 1.8rem;
-  margin: 0 0 3vh;
   font-weight: 300;
+  margin: 0 0 3vh;
 }
 
 #mobile, #desktop{
@@ -29,17 +29,16 @@
 }
 
 .mobile-title{
-  cursor: pointer;
-  background-color: #252422;
-  color: #ccc5b9;
-  transition: all 0.4s ease-in-out, border-radius 0.1s ease-in-out;
   border-bottom: 1px solid #ccc5b9;
+  color: #ccc5b9;
+  background-color: #252422;
+  cursor: pointer;
+  transition: all 0.4s ease-in-out, border-radius 0.1s ease-in-out;
 }
 
 .mobile-title-inner{
   display: flex;
   align-items: center;
-  align-content: space-between;
   padding: 2vh 0 2vh 8vw;
 }
 
@@ -51,22 +50,22 @@
 }
 
 .mobile-title-inner-arrow *{
-    height: calc(min(3rem, min(8vw, 6vh)) * 0.04);
-    width: calc(min(3rem, min(8vw, 6vh)) * 0.2);
-    position: absolute;
-    border-radius: 2px;
-    transition: all 0.15s ease-in-out, background-color 0.4s ease-in-out;
-    background-color: #ccc5b9;
+  position: absolute;
+  width: calc(min(3rem, min(8vw, 6vh)) * 0.2);
+  height: calc(min(3rem, min(8vw, 6vh)) * 0.04);
+  border-radius: 2px;
+  background-color: #ccc5b9;
+  transition: all 0.15s ease-in-out, background-color 0.4s ease-in-out;
 }
 
 .mobile-title-inner-line-1{
-  transform-origin: 0 50%;
   transform: translate(15%, -50%) rotate(45deg) translate(-50%, 0);
+  transform-origin: 0 50%;
 }
 
 .mobile-title-inner-line-2{
-  transform-origin: 100% 50%;
   transform: translate(-15%, -50%) rotate(-45deg) translate(50%, 0);
+  transform-origin: 100% 50%;
 }
 
 .animate-arrow.mobile-title-inner-line-1{
@@ -78,11 +77,11 @@
 }
 
 .mobile-description{
+  overflow: hidden;
+  height: 0;
   text-align: center;
   background-color: #ccc5b9;
-  overflow: hidden;
   transition: height 0.4s ease-in-out;
-  height: 0;
 }
 
 .mobile-description-inner{
@@ -90,8 +89,8 @@
 }
 
 .mobile-description-inner h2{
-  margin: 2vh 0;
   font-size: 1.4rem;
+  margin: 2vh 0;
 }
 
 .mobile-description-inner h3{
@@ -100,8 +99,8 @@
 }
 
 .mobile-description-inner img{
-  margin-bottom: 8vh;
   width: 8rem;
+  margin-bottom: 8vh;
   border-radius: 20px;
 }
 
@@ -112,50 +111,49 @@
 
 .bar-to-close{
   display: flex;
-  align-items: center;
   justify-content: center;
-  cursor: pointer;
-  height: 2vh;
+  align-items: center;
   width: 5vh;
+  height: 2vh;
   margin: 0 calc(0.75vh - 8vw) 1.2vh auto;
+  cursor: pointer;
 }
 
 .bar-to-close-inner{
-  border-radius: 4px 0 4px 0;
-  height: 0.4vh;
   width: 2.5vh;
+  height: 0.4vh;
+  border-radius: 4px 0 4px 0;
   background-color: #403D39;
 }
 
 #desktop-left{
+  overflow: hidden;
   /* Golden Ratio */
   width: 38%;
-  overflow: hidden;
 }
 
 #desktop-right{
+  position: relative;
   width: 62%;
   background-color: #ccc5b9;
-  position: relative;
 }
 
 .desktop-title{
-  cursor: pointer;
-  background-color: #252422;
-  color: #ccc5b9;
-  transition: all 0.4s ease-in-out;
   border-bottom: 1px solid #ccc5b9;
+  color: #ccc5b9;
+  background-color: #252422;
+  cursor: pointer;
+  transition: all 0.4s ease-in-out;
 }
 
 #desktop-module-1-title{
-  background-color: #eb5e28;
   color: #252422;
+  background-color: #eb5e28;
 }
 
 .desktop-title-inner{
   display: flex;
   align-items: center;
-  align-content: space-between;
   padding: 2vh 0 2vh 2vw;
 }
 
@@ -167,12 +165,12 @@
 }
 
 .desktop-title-inner-arrow *{
-    height: calc(min(3rem, min(8vw, 6vh)) * 0.04);
-    width: calc(min(3rem, min(8vw, 6vh)) * 0.2);
-    position: absolute;
-    border-radius: 2px;
-    transition: all 0.15s ease-in-out, background-color 0.4s ease-in-out;
-    background-color: #ccc5b9;
+  position: absolute;
+  width: calc(min(3rem, min(8vw, 6vh)) * 0.2);
+  height: calc(min(3rem, min(8vw, 6vh)) * 0.04);
+  border-radius: 2px;
+  background-color: #ccc5b9;
+  transition: all 0.15s ease-in-out, background-color 0.4s ease-in-out;
 }
 
 #desktop-module-1-title .desktop-title-inner-arrow *{
@@ -180,13 +178,13 @@
 }
   
 .desktop-title-inner-line-1{
-  transform-origin: 0 50%;
   transform: translate(0, calc(-50% - 150%)) rotate(45deg) translate(-50%, 0);
+  transform-origin: 0 50%;
 }
   
 .desktop-title-inner-line-2{
-  transform-origin: 0 50%;
   transform: translate(0, calc(-50% + 150%)) rotate(-45deg) translate(-50%, 0);
+  transform-origin: 0 50%;
 }
   
 .animate-arrow.desktop-title-inner-line-1{
@@ -198,21 +196,24 @@
 }
 
 .desktop-description{
-  position: absolute;
-  text-align: center;
-  background-color: #eb5e28;
   overflow: hidden;
-  transition: all 0.4s ease-in-out;
+  position: absolute;
   width: 0;
   height: calc((100% - 7px) / 8);
+  text-align: center;
+  background-color: #eb5e28;
+  transition: all 0.4s ease-in-out;
 }
 
 #desktop-module-1-description{
-  top: 0;
-  height: 100%;
-  width: 100%;
-  background-color: #ccc5b9;
+  overflow-y: scroll;
+  /* Although depreciated, "overlay" is still supported by all modern browsers.
+  Without this setting, the contents moves to allocate the scrollbar when not desired. */
   overflow-y: overlay;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #ccc5b9;
 }
 
 #desktop-module-2-description{
@@ -244,9 +245,9 @@
 }
 
 .desktop-description-inner{
+  margin: 0 4vw;
   opacity: 0;
   transition: all 0.4s ease-in-out;
-  margin: 0 4vw;
 }
 
 #desktop-module-1-description .desktop-description-inner{
@@ -254,8 +255,8 @@
 }
 
 .desktop-description-inner h2{
-  margin: 3vh 0 2vh;
   font-size: 1.4rem;
+  margin: 3vh 0 2vh;
 }
 
 .desktop-description-inner h3{
@@ -264,8 +265,8 @@
 }
 
 .desktop-description-inner img{
-  margin-bottom: 8vh;
   width: 8rem;
+  margin-bottom: 8vh;
   border-radius: 20px;
 }
 
@@ -327,12 +328,11 @@
   #overview-section{
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;
     width: 36%;
     margin-right: 2%;
-    background-color: #ccc5b9;
-    border-radius: 25px 0 25px 0;
     padding: 0 3vw;
+    border-radius: 25px 0 25px 0;
+    background-color: #ccc5b9;
   }
 
   #course{
@@ -341,8 +341,8 @@
   }
 
   #overview{
-    margin: 0;
     font-size: 1.2rem;
+    margin: 0;
     margin-bottom: 2vh;
   }
 
